subprojects/pclc/test/errors/func_add.pcl
// RUN: not pclc %s | tee %t.stdout

foo = func() { return 1; }

a = foo + 5 / 1;
print a();
